--- a/Stensaxpåse/style.css
+++ b/Stensaxpåse/style.css
@@ -1,8 +1,8 @@
 body {
   text-align: center;
   background-color: #f2f2f2;
-  background: url(b.jpeg);
-  color: #333;
+  background: url(mmm.jpeg);
+  color: #b11111;
   font-family: Arial, sans-serif;
 }
 
@@ -22,7 +22,7 @@ h1 {
   font-size: 24px;
   margin-top: 20px;
   font-weight: bold;
-  color: green;
+  color: rgb(165, 239, 165);
 }
 
 #choices button {
